admin-backend/src/main/java/com/example/backend/common/error/package-info.java
/**
 * 业务异常处理
 */
package com.example.backend.common.error;
